--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/bred.jpg" alt="Mansur profile picture"></td>
+        <td><img src="images/Bred.jpg" alt="Mansur profile picture"></td>
         <td><h1>Mansur Yigitaliev</h1>
     <p><em>Chief specialist at <strong><a href="https://mineconomy.uz/">Ministry of Economy</a></strong>.</em></p></td>
       </tr>
